# openwrap

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REFACTORING_PRIORITIES.md  package.json
crates/openwrap-core/: Cargo.toml
crates/openwrap-core/src/: lib.rs
crates/openwrap-core/src/app_state/: mod.rs
crates/openwrap-core/src/config/: inline.rs  mod.rs  parser.rs  policy.rs  rewrite.rs
crates/openwrap-core/src/connection/: backoff.rs  log_parser.rs  manager.rs  mod.rs  session.rs  state_machine.rs
crates/openwrap-core/src/connection/manager/: connect.rs  errors.rs  events.rs  mod.rs  runtime.rs  state.rs  tests.rs
crates/openwrap-core/src/dns/: macos.rs  mod.rs  model.rs  observer.rs
crates/openwrap-core/src/dns/macos/: fragments.rs  mod.rs  paths.rs  render.rs
crates/openwrap-core/src/dns/macos/templates/: global_down.sh  global_up.sh  scoped_down.sh  scoped_up.sh
crates/openwrap-core/src/errors/: mod.rs
crates/openwrap-core/src/logging/: catalog.rs  mod.rs  model.rs  session_manager.rs  shared.rs  tests.rs  writer.rs
crates/openwrap-core/src/openvpn/: backend.rs  direct_launcher.rs  helper_launcher.rs  helper_protocol.rs  mod.rs  runtime.rs
crates/openwrap-core/src/profiles/: assets.rs  ids.rs  import.rs  mod.rs  model.rs  parsed.rs  profile.rs  repository.rs  runtime.rs  validation.rs
crates/openwrap-core/src/profiles/import/: assets.rs  importer.rs  mod.rs  report.rs  tests.rs  validator.rs
crates/openwrap-core/src/secrets/: composite.rs  keychain.rs  local_db.rs  mod.rs  totp.rs
crates/openwrap-core/src/storage/: sqlite.rs
crates/openwrap-core/src/storage/sqlite/: codec.rs  mappers.rs  mod.rs  profile_queries.rs  schema.rs  settings_queries.rs  tests.rs
crates/openwrap-helper/: Cargo.toml
crates/openwrap-helper/src/: commands.rs  connect.rs  ipc.rs  lib.rs  main.rs  request.rs  system.rs  tests.rs
crates/openwrap-helper/src/reconcile/: dns.rs  mod.rs  processes.rs
docs/: architecture.md  helper-setup.md  profile-import.md  roadmap.md  security-model.md
scripts/: dev-check.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  bootstrap.rs  error.rs  event_forwarder.rs  events.rs  invoke.rs  lib.rs  main.rs
src-tauri/src/app_state/: backend_factory.rs  mod.rs  startup.rs
src-tauri/src/commands/: connection.rs  logs.rs  mod.rs  profiles.rs  settings.rs
src-tauri/src/commands/profiles/: delete.rs  dns_policy.rs  generated_password.rs  import.rs  mod.rs  parse.rs  selection.rs
src-tauri/src/tray/: actions.rs  menu.rs  mod.rs  presenter.rs  target.rs
test/: config-regression.mjs
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: main.tsx
ui/src/app/: App.tsx  providers.tsx  routes.tsx
ui/src/components/: EmptyState.tsx  LogViewer.tsx  Sidebar.tsx  StatusBadge.tsx  TopBar.tsx
ui/src/features/connection/: ConnectionPanel.tsx  api.ts  useConnectionEvents.ts
ui/src/features/logs/: LogPane.tsx  api.ts
ui/src/features/profiles/: ImportProfileDialog.tsx  ProfileDetail.tsx  ProfileList.tsx  api.ts
ui/src/features/settings/: SettingsView.tsx  api.ts
ui/src/hooks/: useSelection.ts
ui/src/lib/: tauri.ts  theme.ts
ui/src/store/: appStore.ts  createAppStore.ts
ui/src/store/actions/: connectionActions.ts  index.ts  loadInitial.ts  profileActions.ts  settingsActions.ts
ui/src/store/reducers/: connectionEvents.ts
ui/src/store/slices/: connectionSlice.ts  errorSlice.ts  importSlice.ts  index.ts  profileSlice.ts  settingsSlice.ts
ui/src/styles/: base.css  global.css  responsive.css  variables.css
ui/src/styles/components/: badges.css  buttons.css  drawer.css  forms.css  log-viewer.css  modal.css
ui/src/styles/features/: config.css  connection.css  logs.css  profile.css  settings.css
ui/src/styles/layout/: content.css  shell.css  sidebar.css  topbar.css
ui/src/styles/states/: errors.css  typography.css
ui/src/types/: domain.ts  ipc.ts
(+16 files in other folders)
