[workspace]
members = [
  "src-tauri",
  "crates/openwrap-core",
  "crates/openwrap-helper",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["OpenWrap Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
once_cell = "1.21"
parking_lot = "0.12"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.3", features = ["tray-icon"] }
tauri-build = { version = "2.0" }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-opener = "2.2"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
