[package]
name = "openwrap-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openwrap_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
openwrap-core = { path = "../crates/openwrap-core" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-opener.workspace = true
tokio.workspace = true

