[package]
name = "openwrap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
hmac.workspace = true
parking_lot.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[dev-dependencies]
tempfile = "3.19"
tokio = { workspace = true, features = ["test-util"] }
