[package]
name = "openwrap-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
libc.workspace = true
openwrap-core = { path = "../openwrap-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
